[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Objects/StairsChangeFloor.gd" type="Script" id=1]
[ext_resource path="res://assets/default_font_10_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/default_font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[sub_resource type="Animation" id=2]
resource_name = "Fade Out"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayerTransition/BlackRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayerTransition/BlackRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="StairsChangeFloor" type="Area2D"]
z_index = 20
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="DialogBox" type="Control" parent="."]
visible = false
margin_left = 32.0
margin_top = -144.0
margin_right = 176.0
margin_bottom = -64.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Você deseja entrar para o próximo andar?
{ENTER}"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayerTransition" type="CanvasLayer" parent="."]

[node name="BlackRect" type="ColorRect" parent="CanvasLayerTransition"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade Out" = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_StairsChangeFloor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_StairsChangeFloor_body_exited"]
